<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rahat</string>
    <string name="action_settings">Settings</string>
	<string name="edit_1">15</string>
	<string name="text_info">
	    Press \"Begin Auto Send\" to start sending your location every 15 minutes. 
	    \n(or set your own time interval).\n
	    Press \"End Auto Send\" to stop sending your location.\n
	    Press \"Send Location Now\" to send your location now.
	    </string>
	<string name="text_scroll"></string>
	<string name="text_interval">Enter a time interval (mins):</string>
	<string name="button_send">Send Location Now</string>
	<string name="button_start">Begin Auto Send</string>
	<string name="button_stop">End Auto Send</string>
	<string name="notif_text">Auto Send service started</string>
	<string name="notification_title">Rahat Auto Send</string>
	<string name="title_activity_main">MainActivity</string>
</resources>
