<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rahat.MainActivity$PlaceholderFragment"
	android:orientation="vertical" >
    <TextView android:id="@+id/text_top"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:text="@string/text_info" />
    
    <LinearLayout android:layout_width="wrap_content"
    			  android:layout_height="wrap_content"
    			  android:orientation="horizontal">
    	
    	<TextView android:id="@+id/text_inter"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:text="@string/text_interval" />
    	
    	<EditText android:id="@+id/edit_1"
        		  android:layout_width="wrap_content"
        		  android:layout_height="wrap_content"
        		  android:text="@string/edit_1"
        		  android:maxLength="3"
        		  android:inputType="number" />    
    </LinearLayout>
    
    
    <LinearLayout android:layout_width="wrap_content"
    			  android:layout_height="wrap_content"
    			  android:orientation="horizontal">
        
        <Button	
            	android:id="@+id/beginbutton"
            	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/button_start"
		        android:onClick="beginService" />
        <Button	
            	android:id="@+id/endbutton"
            	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/button_stop"
		        android:onClick="endService" /> 
    </LinearLayout>
    
    
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendLocation" />
    
    <ScrollView android:layout_width="fill_parent"
    			android:layout_height="wrap_content" >
	    
	    <TextView android:id="@+id/text_1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text_scroll" />
	
	</ScrollView>

</LinearLayout>

